# Mamba

./: .gitignore  README.md
mamba_bringup/: CMakeLists.txt  package.xml
mamba_bringup/config/: config.rviz  mamba_default.yaml  remote.rviz
mamba_bringup/launch/: mamba.launch  remote_monitor.launch
mamba_description/: CMakeLists.txt  package.xml
mamba_description/config/: config_visual.rviz
mamba_description/launch/: mamba_gazebo.launch  mamba_rviz.launch
mamba_description/meshes/: Camera_Supports.dae
mamba_description/urdf/: mamba.urdf.xacro  mamba_gazebo.urdf.xacro
mamba_desktop/: CMakeLists.txt  package.xml
mamba_desktop/config/: config_gazebo.rviz  config_visual.rviz  controller_def.yaml
mamba_desktop/launch/: mamba_empty.launch  mamba_gazebo_demo.launch  mamba_spawn.launch
mamba_desktop/urdf/: mamba_gazebo.urdf.xacro
realsense2_description/urdf/: _d435.urdf.xacro
