<?xml version="1.0"?>
<package format="2">
  <name>mamba_description</name>
  <version>1.0.0</version>
  <description>Robot URDF descrption for Mamba</description>

  <!-- Based on the original Roomba description by Gonçalo Cabrita-->
  <!-- Original URDF at: https://github.com/goncabrita/roomba_robot/tree/master/roomba_description -->
  
  <maintainer email="jhkrejcim@unal.edu.co">JurgenHK</maintainer>

  <license>GPLv3</license>

  <author email="jhkrejcim@unal.edu.co">JurgenHK</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>urdf</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>xacro</build_depend>

  <build_export_depend>urdf</build_export_depend>
  <build_export_depend>robot_state_publisher</build_export_depend>
  <build_export_depend>xacro</build_export_depend>

  <exec_depend>urdf</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
  </export>

</package>
