<?xml version="1.0"?>
<package format="2">
  <name>mamba_desktop</name>
  <version>1.0.0</version>
  <description>Gazebo simulation package for Mamba robot</description>

  <maintainer email="jhkrejcim@unal.edu.co">JurgenHK</maintainer>

  <license>GPLv3</license>

  <author email="jhkrejcim@unal.edu.co">JurgenHK</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>controller_manager</build_depend>
  <build_depend>joint_state_controller</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>urdf</build_depend>

  <build_export_depend>controller_manager</build_export_depend>
  <build_export_depend>joint_state_controller</build_export_depend>
  <build_export_depend>robot_state_publisher</build_export_depend>
  <build_export_depend>urdf</build_export_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>urdf</exec_depend>


  <export>
  </export>

</package>
